fixed map collapsing issue on mobile devices

--- a/src/multitrack_core/src/app/style.css
+++ b/src/multitrack_core/src/app/style.css
@@ -88,4 +88,7 @@ a {
     #controls {
         max-width: 100%;
     }
+    #map {
+        min-height: 50vh;
+    }
 }
